# flux

./: CMakeLists.txt  README.md
.github/workflows/: bvt-clang18.yml  bvt-gcc13.yml  bvt-msvc14.yml  test-ci.yml
cmake/: check_features.cmake
demo/: CMakeLists.txt
demo/gaussquadrature/: CMakeLists.txt  demo_gaussquadrature.cpp
docs/: gaussquad_doc.md  quadrature3_doc.md  solvers.md
examples/: .gitignore  CMakeLists.txt
examples/DG-RK3/: CMakeLists.txt  dg_rk3_c.cpp  dg_rk3_v.cpp  dg_test.hpp
examples/FD-RK3-WENO5/: CMakeLists.txt
examples/FV-Euler-Godunov/: CMakeLists.txt  fv_godunov_p.cpp
examples/FV-RK3-WENO5/: CMakeLists.txt  fv_test.hpp
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/gaussquadrature/: gausslegendre.hpp  gausslobatto.hpp  quadrature.hpp  quadrature3.hpp
src/base/solver/: solver_crtp.hpp  solver_deducing.hpp  solver_stdfunc.hpp  solver_template.hpp  solver_virtual.hpp
src/utils/: CMakeLists.txt  error_and_order.hpp
test/: CMakeLists.txt  error_test.cpp  gaussquadrature_test.cpp  linespace_test.cpp  period_index_test.cpp
